--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="camera_error">This device doesn\'t support Camera2 API.</string>
     <string name="change">change</string>
     <string name="please_grant_permission">권한을 허용해주세요.</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
